--- a/index.html
+++ b/index.html
@@ -96,23 +96,25 @@
     <section id="about" class="section mt-3">
         <div class="container mt-5">
             <div class="row text-center text-md-left">
-                <div class="col-md-3">
-                    <img src="assets/imgs/minha-img.jpeg" alt="" class="img-thumbnail mb-4">
-                </div>
-                <div class="pl-md-4 col-md-9">
-                    <h6 class="title">Brenno Alencar</h6>
-                    <p class="subtitle sub-title-zero">Desenvolvedor Front-End</p>
-                    <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
-                        JavaScript, Git,
-                        Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de aprimorar
-                        minhas habilidades para entregar soluções de alta qualidade.</p>
-                    <p class="pl-titles">Ao longo da minha carreira, tenho me dedicado a aprimorar minhas habilidades de
-                        desenvolvimento
-                        para criar sistemas de alta qualidade e desempenho. Valorizo a importância do código bem escrito
-                        para garantir a longevidade dos sistemas e facilitar a colaboração entre desenvolvedores.
-                        Acredito que o sucesso dos projetos depende do trabalho em equipe, e estou sempre aberto a
-                        aprender com meus colegas para contribuir para o crescimento coletivo.</p>
-                    <a href="curriculo/Curriculo.pdf" download class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>
+                <div class="row">
+                    <div class="col-md-3 scroll-effect">
+                        <img src="assets/imgs/minha-img.jpeg" alt="" class="img-thumbnail mb-4">
+                    </div>
+                    <div class="pl-md-4 col-md-9 scroll-effect">
+                        <h6 class="title">Brenno Alencar</h6>
+                        <p class="subtitle sub-title-zero">Desenvolvedor Front-End</p>
+                        <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
+                            JavaScript, Git,
+                            Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de aprimorar
+                            minhas habilidades para entregar soluções de alta qualidade.</p>
+                        <p class="pl-titles">Ao longo da minha carreira, tenho me dedicado a aprimorar minhas habilidades de
+                            desenvolvimento
+                            para criar sistemas de alta qualidade e desempenho. Valorizo a importância do código bem escrito
+                            para garantir a longevidade dos sistemas e facilitar a colaboração entre desenvolvedores.
+                            Acredito que o sucesso dos projetos depende do trabalho em equipe, e estou sempre aberto a
+                            aprender com meus colegas para contribuir para o crescimento coletivo.</p>
+                        <a href="curriculo/Curriculo.pdf" download class="btn btn-primary rounded mt-3">DOWNLOAD CV</a>
+                    </div>
                 </div>
             </div>
         </div>
@@ -126,7 +128,7 @@
                 sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível. Abaixo,
                 compartilho alguns dos meus certificados mais recentes.</p>
 
-            <div class="row">
+            <div class="row scroll-effect">
                 <div class="col-sm-6 col-md-3 mb-4">
                     <a class="card-link"
                         href="https://cursos.alura.com.br/certificate/02633646-b53d-4b5d-8cbe-2be9b66dca78?lang=pt_BR"
@@ -232,10 +234,10 @@
             <h6 class="subtitle sub-title-one sub-title-m6">Portfólio</h6>
             <p class="mb-5 pb-4">Explore os projetos que desenvolvi e colaborei no meu GitHub. Veja as soluções e
                 inovações <br> que implementei e descubra como elas podem agregar valor às suas necessidades.</p>
-
+    
             <div class="row">
                 <div class="col-sm-4">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper scroll-effect">
                         <img src="assets/imgs/img-eterno-principal.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
@@ -244,20 +246,19 @@
                             </div>
                         </div>
                     </div>
-                    <div class="img-wrapper">
+                    <div class="img-wrapper scroll-effect">
                         <img src="assets/imgs/img-organo-teste.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
-                                <a href="#" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
+                                <a href="#" target="_blank"><i class="ti-zoom-in"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper scroll-effect">
                         <img src="assets/imgs/img-contacts.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
@@ -267,7 +268,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="img-wrapper">
+                    <div class="img-wrapper scroll-effect">
                         <img src="assets/imgs/img-organo-teste.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
@@ -279,7 +280,7 @@
                     </div>
                 </div>
                 <div class="col-sm-4">
-                    <div class="img-wrapper">
+                    <div class="img-wrapper scroll-effect">
                         <img src="assets/imgs/img-cardapio.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
@@ -289,7 +290,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="img-wrapper">
+                    <div class="img-wrapper scroll-effect">
                         <img src="assets/imgs/folio-6.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
@@ -301,7 +302,6 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
     <!-- End of portfolio section -->
@@ -311,11 +311,9 @@
     <section id="contact" class="position-relative section">
         <div class="container text-center">
             <h6 class="subtitle sub-title">Contato</h6>
-            <p class="mb-5 pb-4">Vamos conversar!
-                Tem alguma ideia ou pergunta? Preencha o formulário ou envie um e-mail, estou à disposição!
-            </p>
-
-            <div class="contact text-left">
+            <p class="mb-5 pb-4">Vamos conversar! Tem alguma ideia ou pergunta? Preencha o formulário ou envie um e-mail, estou à disposição!</p>
+    
+            <div class="contact text-left scroll-effect"> <!-- Verifique se a classe scroll-effect está aqui -->
                 <div class="form">
                     <h6 id="sub-title" class="subtitle">Fale Comigo</h6>
                     <form action="https://formsubmit.co/brennoalencar79@gmail.com" target="_blank" method="POST">
@@ -325,13 +323,11 @@
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="email">E-mail</label>
-                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail"
-                                required>
+                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" required>
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="message">Mensagem</label>
-                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem"
-                                required></textarea>
+                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem" required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block rounded w-lg">Enviar mensagem</button>
                     </form>
@@ -397,8 +393,10 @@
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
     <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-    <script src="./assets/js/letreiro.js"></script>
+    <script src="./assets/js/letreiro.js"></script>    
+    <script src="assets/js/scroll-direita.js"></script>
     <script src="assets/js/scrol.js"></script>
+    <script src="assets/js/effect.js"></script>
 
 
     <!-- steller js -->
