--- a/index.html
+++ b/index.html
@@ -105,11 +105,14 @@
                         <p class="subtitle sub-title-zero">Desenvolvedor Front-End</p>
                         <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
                             JavaScript, Git,
-                            Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de aprimorar
+                            Node.js, HTML e CSS. Focado em criar interfaces intuitivas, estou sempre em busca de
+                            aprimorar
                             minhas habilidades para entregar soluções de alta qualidade.</p>
-                        <p class="pl-titles">Ao longo da minha carreira, tenho me dedicado a aprimorar minhas habilidades de
+                        <p class="pl-titles">Ao longo da minha carreira, tenho me dedicado a aprimorar minhas
+                            habilidades de
                             desenvolvimento
-                            para criar sistemas de alta qualidade e desempenho. Valorizo a importância do código bem escrito
+                            para criar sistemas de alta qualidade e desempenho. Valorizo a importância do código bem
+                            escrito
                             para garantir a longevidade dos sistemas e facilitar a colaboração entre desenvolvedores.
                             Acredito que o sucesso dos projetos depende do trabalho em equipe, e estou sempre aberto a
                             aprender com meus colegas para contribuir para o crescimento coletivo.</p>
@@ -234,7 +237,7 @@
             <h6 class="subtitle sub-title-one sub-title-m6">Portfólio</h6>
             <p class="mb-5 pb-4">Explore os projetos que desenvolvi e colaborei no meu GitHub. Veja as soluções e
                 inovações <br> que implementei e descubra como elas podem agregar valor às suas necessidades.</p>
-    
+
             <div class="row">
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
@@ -311,8 +314,9 @@
     <section id="contact" class="position-relative section">
         <div class="container text-center">
             <h6 class="subtitle sub-title">Contato</h6>
-            <p class="mb-5 pb-4">Vamos conversar! Tem alguma ideia ou pergunta? Preencha o formulário ou envie um e-mail, estou à disposição!</p>
-    
+            <p class="mb-5 pb-4">Vamos conversar! Tem alguma ideia ou pergunta? Preencha o formulário ou envie um
+                e-mail, estou à disposição!</p>
+
             <div class="contact text-left fade-in-effect">
                 <div class="form">
                     <h6 id="sub-title" class="subtitle">Fale Comigo</h6>
@@ -323,11 +327,13 @@
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="email">E-mail</label>
-                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail" required>
+                            <input type="email" class="form-control" id="email" placeholder="Digite seu e-mail"
+                                required>
                         </div>
                         <div class="form-group">
                             <label class="contact-label" for="message">Mensagem</label>
-                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem" required></textarea>
+                            <textarea id="message" cols="30" rows="5" class="form-control" placeholder="Sua mensagem"
+                                required></textarea>
                         </div>
                         <button type="submit" class="btn btn-primary btn-block rounded w-lg">Enviar mensagem</button>
                     </form>
@@ -393,7 +399,7 @@
     <script src="assets/vendors/bootstrap/bootstrap.bundle.js"></script>
     <!-- bootstrap 3 affix -->
     <script src="assets/vendors/bootstrap/bootstrap.affix.js"></script>
-    <script src="./assets/js/letreiro.js"></script>    
+    <script src="./assets/js/letreiro.js"></script>
     <script src="assets/js/scroll-direita.js"></script>
     <script src="assets/js/scroll.js"></script>
     <script src="assets/js/effect.js"></script>
