--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             <div class="row scroll-effect">
                 <div class="col-sm-6 col-md-3 mb-4">
                     <a class="card-link"
-                        href="https://cursos.alura.com.br/certificate/02633646-b53d-4b5d-8cbe-2be9b66dca78?lang=pt_BR"
+                        href="certificado/Javascript-40-Horas.pdf"
                         target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
