--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
             <p class="mb-5 pb-4">Vamos conversar! Tem alguma ideia ou pergunta? Preencha o formulário ou envie um
                 e-mail, estou à disposição!</p>
 
-            <div class="contact text-left fade-in-effect">
+            <div class="contact text-left scroll-effect">
                 <div class="form">
                     <h6 id="sub-title" class="subtitle">Fale Comigo</h6>
                     <form action="https://formsubmit.co/brennoalencar79@gmail.com" target="_blank" method="POST">
