--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="img-holder">
-                <img src="assets/imgs/man.svg" alt="">
+                <img src="#" alt="">
             </div>
         </div>
     </header>
@@ -228,6 +228,7 @@
                         </div>
                     </a>
                 </div>
+            </div>
     </section>
     <!-- End of Sectoin -->
 
