--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="img-holder">
-                <img src="#" alt="">
+                <img src="assets/imgs/Imagem_-img-removebg-preview.png" alt="">
             </div>
         </div>
     </header>
