--- a/index.html
+++ b/index.html
@@ -256,7 +256,6 @@
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
                                 <a href="#" target="_blank"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -268,7 +267,6 @@
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -278,7 +276,6 @@
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
@@ -288,9 +285,8 @@
                         <img src="assets/imgs/img-cardapio.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Cardapio Online</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
+                                <h5>Cardápio Online</h5>
+                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -300,7 +296,6 @@
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
-                                <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>
                         </div>
                     </div>
