--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                         <img src="assets/imgs/img-organo-teste.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
+                                <h5>Organo</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
