--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/folio-6.jpg" alt="">
+                        <img src="assets/imgs/organo-testes1.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
