--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/img-organo-teste.png" alt="">
+                        <img src="" alt="Foto Projeto2">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
@@ -275,7 +275,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Organo</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
+                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -291,11 +291,11 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/organo-testes1.png" alt="">
+                        <img src="#" alt="Foto Projeto">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Project Title</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
+                                <a href="#https://organo-two-vert.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
