--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/img-organo-teste.png" alt="">
+                        <img src="assets/imgs/anime.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Organo</h5>
