--- a/index.html
+++ b/index.html
@@ -251,10 +251,10 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="" alt="Foto Projeto2">
+                        <img src="assets/imgs/folio-5.jpg" alt="Foto Projeto2">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
+                                <h5>Desenvolvendo ainda...</h5>
                                 <a href="#" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -265,16 +265,16 @@
                         <img src="assets/imgs/img-contacts.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
+                                <h5>Desenvolvendo ainda...</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/anime.png" alt="">
+                        <img src="assets/imgs/anime.png" alt="Foto de Animes Juntos">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Organo</h5>
+                                <h5>Animes</h5>
                                 <a href="https://organo-two-vert.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -282,7 +282,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/img-cardapio.png" alt="">
+                        <img src="assets/imgs/img-cardapio.png" alt="Cardapio Online">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Cardápio Online</h5>
@@ -291,11 +291,11 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="#" alt="Foto Projeto">
+                        <img src="assets/imgs/folio-4.jpg" alt="Foto Projeto">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
-                                <a href="#https://organo-two-vert.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <h5>Desenvolvendo ainda...</h5>
+                                <a href="#" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
