--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Desenvolvendo ainda...</h5>
-                                <a href="#" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -295,7 +295,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Desenvolvendo ainda...</h5>
-                                <a href="#" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
