--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                         <img src="assets/imgs/folio-5.jpg" alt="Foto Projeto2">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Desenvolvendo ainda...</h5>
+                                <h5>Desenvolvendo...</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -265,7 +265,7 @@
                         <img src="assets/imgs/img-contacts.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Desenvolvendo ainda...</h5>
+                                <h5>Desenvolvendo...</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -294,7 +294,7 @@
                         <img src="assets/imgs/folio-2.jpg" alt="Foto Projeto">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Desenvolvendo ainda...</h5>
+                                <h5>Desenvolvendo...</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
