--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/img-contacts.png" alt="">
+                        <img src="assets/imgs/input-img.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Desenvolvendo...</h5>
