Adicionei projeto cart

--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/img-eterno-principal.png" alt="">
+                        <img src="assets/imgs/img-eterno.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>L2 Eterno</h5>
@@ -262,11 +262,11 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/input-img.png" alt="">
+                        <img src="assets/imgs/cart-img.png" alt="">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Desenvolvendo...</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
+                                <h5>Shopping Cart</h5>
+                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                 </div>
                 <div class="col-sm-4">
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/img-cardapio.png" alt="Cardapio Online">
+                        <img src="assets/imgs/cardapio.png" alt="Cardapio Online">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Cardápio Online</h5>
