--- a/index.html
+++ b/index.html
@@ -133,9 +133,7 @@
 
             <div class="row scroll-effect">
                 <div class="col-sm-6 col-md-3 mb-4">
-                    <a class="card-link"
-                        href="certificado/Javascript-40-Horas.pdf"
-                        target="_blank">
+                    <a class="card-link" href="certificado/Javascript-40-Horas.pdf" target="_blank">
                         <div class="custom-card card border">
                             <div class="card-body">
                                 <i class="fa-brands fa-js"></i>
@@ -266,7 +264,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Shopping Cart</h5>
-                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -275,7 +274,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Animes</h5>
-                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -286,7 +286,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Cardápio Online</h5>
-                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
