--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/folio-5.jpg" alt="Foto Projeto2">
+                        <img src="#" alt="Foto Projeto2">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Desenvolvendo...</h5>
@@ -292,7 +292,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/folio-2.jpg" alt="Foto Projeto">
+                        <img src="#" alt="Foto Projeto">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Desenvolvendo...</h5>
