Adicionei as imgs

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/anime.png" alt="Foto de Animes Juntos">
+                        <img src="assets/imgs/teste-2.png" alt="Foto de Animes Juntos">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Animes</h5>
