--- a/index.html
+++ b/index.html
@@ -264,8 +264,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Shopping Cart</h5>
-                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
+                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -274,8 +273,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Animes</h5>
-                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
+                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -286,8 +284,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Cardápio Online</h5>
-                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
-                                        class="ti-zoom-in"></i></a>
+                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
