--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="#" alt="Foto Projeto">
+                        <img src="assets/imgs/landing.png" alt="Foto Projeto">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Desenvolvendo...</h5>
