--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Desenvolvendo...</h5>
-                                <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
+                                <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
