--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                         </div>
                     </div>
                     <div class="img-wrapper scroll-effect">
-                        <img src="assets/imgs/fone.png" alt="Foto Projeto2">
+                        <img src="assets/imgs/rayal-park-img.png" alt="Foto Projeto2">
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Desenvolvendo...</h5>
