--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <img src="assets/imgs/minha-img.jpeg" alt="" class="img-thumbnail mb-4">
                     </div>
                     <div class="pl-md-4 col-md-9 scroll-effect">
-                        <h6 class="title">Brenno Alencar</h6>
+                        <h6 class="title">Sobre <span class="about-me">mim</span></h6>
                         <p class="subtitle sub-title-zero">Desenvolvedor Front-End</p>
                         <p class="pl-titles">Sou desenvolvedor Front-End com 1 ano e 5 meses de experiência em React.js,
                             JavaScript, Git,
