--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         <img src="assets/imgs/rayal-park-img.png" alt="Foto Projeto2">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Desenvolvendo...</h5>
+                                <h5>landing Page</h5>
                                 <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -272,7 +272,7 @@
                         <img src="assets/imgs/teste-2.png" alt="Foto de Animes Juntos">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Animes</h5>
+                                <h5>Animes Personagens</h5>
                                 <a href="https://organo-two-vert.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
@@ -292,7 +292,7 @@
                         <img src="assets/imgs/landing.png" alt="Foto Projeto">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Desenvolvendo...</h5>
+                                <h5>Landing Page</h5>
                                 <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
