--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                         <img src="assets/imgs/rayal-park-img.png" alt="Foto Projeto2">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>landing Page</h5>
+                                <h5>Landing Page</h5>
                                 <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
                             </div>
                         </div>
