--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <section id="service" class="section">
         <div class="container text-center">
             <h6 class="subtitle sub-secundario">Certificados</h6>
-            <p class="mb-5 pb-4">Certificados que obtive refletem meu compromisso com a excelência profissional. Estou
+            <p id="mb-12" class="mb-5 pb-4">Certificados que obtive refletem meu compromisso com a excelência profissional. Estou
                 sempre em busca de novos conhecimentos e habilidades para oferecer o melhor serviço possível. Abaixo,
                 compartilho alguns dos meus certificados mais recentes.</p>
 
@@ -253,7 +253,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Landing Page</h5>
-                                <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://rayal-park-main-main.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -264,7 +265,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Shopping Cart</h5>
-                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://shopping-cart-main-umber.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -273,7 +275,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Animes Personagens</h5>
-                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://organo-two-vert.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -284,7 +287,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Cardápio Online</h5>
-                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://cardapio-five-umber.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -293,7 +297,8 @@
                         <div class="overlay">
                             <div class="overlay-infos">
                                 <h5>Landing Page</h5>
-                                <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i class="ti-zoom-in"></i></a>
+                                <a href="https://landing-page-hazel-eta.vercel.app/" target="_blank"><i
+                                        class="ti-zoom-in"></i></a>
                             </div>
                         </div>
                     </div>
@@ -308,7 +313,7 @@
     <section id="contact" class="position-relative section">
         <div class="container text-center">
             <h6 class="subtitle sub-title">Contato</h6>
-            <p class="mb-5 pb-4">Vamos conversar! Tem alguma ideia ou pergunta? Preencha o formulário ou envie um
+            <p id="mb-12" class="mb-5 pb-4">Vamos conversar! Tem alguma ideia ou pergunta? Preencha o formulário ou envie um
                 e-mail, estou à disposição!</p>
 
             <div class="contact text-left">
