--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </div>
 
                 <div class="buttons pt-3">
-                    <a href="mailto:brennoalenkkar@icloud.com" target="_blank"><button
+                    <a href="mailto:brennoalencar79@gmail.com" target="_blank"><button
                             class="btn btn-primary rounded">Me Contrate!</button></a>
                     <a href="curriculo/Curriculo.pdf" download class="btn btn-dark rounded">DOWNLOAD CV</a>
                 </div>
